--- a/src/app/pages/modulos/technologies/technologies.component.html
+++ b/src/app/pages/modulos/technologies/technologies.component.html
@@ -49,7 +49,7 @@
                     <div *ngIf="viewListOrNot" class="row mt-0 mt-md-2 justify-content-center">
                         <!-- Adicione a classe "justify-content-center" para centralizar -->
                         <div *ngFor="let s of skills"
-                            class=" fade-in mt-5 col-6 col-md-3 d-flex align-items-center justify-content-center">
+                        (click)="viewSkill(s)" class=" fade-in mt-5 col-6 col-md-3 d-flex align-items-center justify-content-center">
                             <div class="text-center panelStack">
                                 <img class="imgStack img-fluid" [src]="s.src" alt="Imagem">
                                 <div>
@@ -88,7 +88,8 @@
                                     <td>{{ skill.tipo }}</td>
                                     <td>
                                         <div class="col-12 d-flex flex-row align-items-center">
-                                            <i class="pi pi-eye rth-color-secundary"></i>
+                                            <i pTooltip="Visualizar"
+                                            tooltipPosition="right"   class="iconView pi pi-eye rth-color-secundary" (click)="viewSkill(skill)"></i>
                                         </div>
                                     </td>
                                 </tr>
@@ -103,3 +104,5 @@
         </div>
     </div>
 </div>
+
+<app-modal-viewer #mViewer [selectItem]="selectSkill"></app-modal-viewer>
