--- a/src/assets/style/utills.scss
+++ b/src/assets/style/utills.scss
@@ -335,3 +335,9 @@ thumb {
   position: relative;
   /* Para posicionar o ícone absolutamente */
 }
+
+
+.iconView {
+  cursor: pointer;
+  color: #d3ff5b81;
+}
