--- a/src/app/components/modais/modal-viewer/modal-viewer.component.html
+++ b/src/app/components/modais/modal-viewer/modal-viewer.component.html
@@ -1,6 +1,6 @@
 <div class="custom-dialog" >
     <p-dialog  [(visible)]="displayModal" [style]="ehMobile ? { width: '90vw', height: '70vw' } : {width: '20vw', height: '20vw'} ">
-        <div class="titleModal text-center col-12">Stack</div>
-        <label>iuahsdihasduihasidhiashdas iasdhiashdiuah sdihasidhashdahsdui haihidashdiahsdashdioahsdqwyeriasdhiaj shdmbcjh ia</label>
+        <div class="titleModal text-center col-12">{{selectItem.nome}}</div>
+        <label>{{selectItem.tipo}}</label>
     </p-dialog>
 </div>
