--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,6 +27,14 @@
 @import "./custom-styles.scss";
 
 
+// #map { height: 400PX;
+//     max-width: 100%;
+//     width: 400PX; }
+
+
+
+
+
 body {
     background-color: #0C0C0C;
 }
