--- a/src/app/pages/modulos/contact/contact.component.html
+++ b/src/app/pages/modulos/contact/contact.component.html
@@ -43,7 +43,7 @@
                             </label> -->
                             <div class="row d-flex justify-content-start">
                                 <div class="mt-4 col-3">
-                                    <span class="mch-fs-25 iconSocial {{c.icon}}"></span>
+                                    <span class="mch-fs-25 iconSocialC {{c.icon}}"></span>
                                 </div>
 
 
