--- a/src/assets/style/utills.scss
+++ b/src/assets/style/utills.scss
@@ -456,15 +456,12 @@ thumb {
 }
 
 .iconSocialContact:hover {
- margin-top: 19px;
-  margin-left: 80px;
-  color: #6c1818;
+  color: #3b3b3b;
   text-decoration: none;
   cursor: pointer;
-  font-size: 30px;
 }
 
-.iconSocial {
+.iconSocialC {
   font-size: 21px;
   color: #646464;
 }
