--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -18,10 +18,10 @@
             <div class="dp-menu collapse text-center text-md-left align-items-left navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav options d-flex flex-column flex-md-row align-items-center">
                     <li *ngFor="let o of optionsMenu" class="opt-navbar nav-item">
-                        <a id="inicio" (mouseenter)="onMouseEnter($event, o)" #rla="routerLinkActive"
+                        <a id="inicio" (mouseenter)="onMouseEnter($event, o)" (mouseleave)="onMouseLeave()"  #rla="routerLinkActive"
                             [routerLink]="['/' + o.routerLink]"
                             class="{{ rla.isActive ? 'typeOpt' : ' optMenu typeOpt z'}}" routerLinkActive
-                            [routerLinkActive]="['linkSelect']" href="#">{{o.option}}</a>
+                            [routerLinkActive]="['linkSelect']" href="#">{{o.option}}<span *ngIf="!ehMobile" class="ml-2 mch-color-grey2 {{o.icon ? ifIcon : ''}}"></span></a>
                         <ul *ngIf="seeMenu" class="ehMobile">
                             <li *ngFor="let s of optionsSubMenu">
                                 <a class="text-left x" (click)="changeRouter(s)"  [routerLink]="['/' + s.routerLink]" >
