--- a/src/app/pages/modulos/contact/contact.component.html
+++ b/src/app/pages/modulos/contact/contact.component.html
@@ -75,6 +75,8 @@
         <!-- <div id="map">
         </div> -->
 
-        <app-footer></app-footer>
+        <div class="mt-4">
+            <app-footer></app-footer>
+        </div>
     </div>
 </div>
