--- a/src/app/pages/modulos/projects/projects.component.html
+++ b/src/app/pages/modulos/projects/projects.component.html
@@ -20,8 +20,8 @@
                                 <div class=" col-12 col-md-6">
                                     <div class="row">
                                         <div class=" text-center panelProjectDesc mt-4 col-12">
-    
-    
+
+
                                             <p class="mt-4">
                                                 profile web - Lucas Machado
                                             </p>
@@ -40,17 +40,21 @@
                                             <span class="m-2 pi pi-prime"></span>
                                         </div>
                                         <div class="  mt-2 text-right col-12 col-md-6">
-                                            <a class=" iconGit m-2 pi pi-github" href="https://github.com/Caslumch/c-mac" target="_blank"><label class="text-access">Acessar Projeto ></label></a>
-                                                
-                                        
+                                            <a class=" iconGit m-2 pi pi-github"
+                                                href="https://github.com/Caslumch/c-mac" target="_blank"><label
+                                                    class="text-access">Acessar Projeto ></label></a>
+
+
                                         </div>
                                     </div>
-    
-    
-    
+
+
+
                                 </div>
-                                <div class="mb-5 text-center d-flex justify-content-center col-12 col-md-6 mch-color-white imgProject">
-                                    <img class="fade-in-projects imgProject" src="./assets/mac-project.png" alt="profile">
+                                <div
+                                    class="mb-5 text-center d-flex justify-content-center col-12 col-md-6 mch-color-white imgProject">
+                                    <img class="fade-in-projects imgProject" src="./assets/mac-project.png"
+                                        alt="profile">
                                 </div>
                             </div>
                         </div>
@@ -58,7 +62,7 @@
 
                         <div class="mt-4 col-12 content">
                             <hr class="divider">
-                          </div>
+                        </div>
 
 
                         <!-- <div class="row mt-5 ">
@@ -104,5 +108,8 @@
             </div>
 
         </div>
-        <app-footer></app-footer>
+        <div class="mt-4">
+            <app-footer></app-footer>
+        </div>
     </div>
+</div>
