--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
     <div class="container-fluid">
-        <div class="d-none d-md-block text-center col-md-5 d-flex">
+        <div class="col-md-5 col-6 d-flex d-md-block text-start text-md-center">
             <a class="navbar-brand mr-auto" id="reload" href="#">
                 <img src="./assets/logo-site-c.png" (error)="handleImageError()" alt="Rita RH"
                     class="file-img sidebar-menu-logo" />
@@ -8,7 +8,7 @@
         </div>
 
         <div class="m-md-0 m-2 row ">
-            <div class="col-12 col-md-2"> <button class=" navbar-toggler" type="button" data-bs-toggle="collapse"
+            <div class="m-md-0 m-2 col-12 col-md-2"> <button class=" navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <span class="menu-d pi pi-bars"></span>
