--- a/src/app/pages/modulos/about/about.component.html
+++ b/src/app/pages/modulos/about/about.component.html
@@ -4,17 +4,27 @@
         <div class="col-12">
             <div class="col-12 col-md-12 "><label class="text-hi-title">Sobre Mim</label></div>
             <div class="row ">
-                <div class=" col-12 col-md-6 mch-color-white imgProfile">
+                <div class=" col-12 col-md-4 mch-color-white imgProfile">
                     <img class="imgProfile" src="./assets/profile.jpg" alt="profile">
                 </div>
-                <div class=" mt-4 mt-md-0 col-12 col-md-6 mch-color-white">
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                        laboris nisi ut aliquip ex ea commodo
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                        laboris nisi ut aliquip ex ea commodo
+                <div class="mt-4 mt-md-0 d-flex flex-column  mt-md-0 col-12 col-md-8 mch-color-grey2  desc bline">
+                    <p class=" d-block">
+                        Meu nome é Lucas, também conhecido como <b>caslu</b>, e tenho <b>26</b> anos.
+                    </p>
+                    <p class="mt-2">
+                        Sou um <b>desenvolvedor frontend</b> apaixonado por tecnologia. Tenho um ano e sete meses de
+                        experiência desempenhando funções de desenvolvedor, e apesar de meu conhecimento amplo em
+                        frontend, também trabalho no lado do backend.
+
+                        Minhas experiências incluem o uso das seguintes tecnologias: Angular, Node.js, HTML, CSS,
+                        JavaScript, TypeScript, Bootstrap, Express, React.js e PrimeNG. <label style="cursor: pointer; color: white;"  [routerLink]="['/stacks']">(ver stacks)</label>
+                    </p>
+                    <p class="mt-2">
+                        Atualmente, estou no 2º semestre
+                        do curso de <b>Análise e Desenvolvimento de Sistemas</b> na <b>FIAP</b>.
+
+                        Além de toda essa bagagem, quando não estou trabalhando, estou sempre codando em projetos
+                        pessoais.
                     </p>
                 </div>
 
