--- a/src/app/pages/modulos/home/home.component.html
+++ b/src/app/pages/modulos/home/home.component.html
@@ -45,3 +45,12 @@
     </div>
 </div>
 <app-modal-weather [dadosWeather]="dadosWeather" [src]="src" #mWeather></app-modal-weather>
+<!-- <div *ngIf="initialLoading !== false" class="overlayWellcome text-center d-flex justify-content-center align-items-center">
+    <div class="col-12">
+        <div class="row">
+            <div class="col-12">
+                <p class="messageInit mch-fs-25 text-center">Olá, bem-vindo. Espero que você tenha uma boa experiência, aproveite</p>
+            </div>
+        </div>
+    </div>
+</div> -->
