--- a/src/app/pages/modulos/technologies/technologies.component.html
+++ b/src/app/pages/modulos/technologies/technologies.component.html
@@ -1,103 +1,87 @@
-<!-- <app-header></app-header>
-<div class="container-found">
-    <div class="containerCsite">
-<div class="row d-flex justify-content-center">
-    <div class="col-12 col-md-12 text-center ">
-        <p class="mt-4 text-hi-title mch-fs-50" >Skills.</p>
-        <img class="imgConfig" src="./assets/config.png" alt="man" />
-        <p class="mt-4" >Em manutenção.</p>
-    </div>
-    <div class="mt-4 m-4 col-12 col-md-3">
-        <p-button [routerLink]="['/home']" label="Página Inicial"></p-button>
-    </div>
-    
-    
-</div>
-        <app-footer></app-footer>
-    </div>
-</div> -->
-
 <app-header></app-header>
 <div class="container-found">
     <div class="containerCsite">
         <div class="col-12">
-            <div class="row">
-                <div class="col-12 col-md-12">
-                    <label class="mch-fs-30">Skills</label>
-                </div>
-                <div class="mt-4 mt-md-0 col-12 col-md-12 mch-color-white">
-                    <p>
-                        Aqui, listo alguns dos serviços e softwares que integram o meu dia a dia:
-                    </p>
-                </div>
-                <div class="mt-4 mt-md-0 col-12 col-md-12 mch-color-white">
-                    <div class="row">
-                        <div class="col-12 col-md-8 d-md-block">
-                            <span class="p-input-icon-right w-full">
-                                <i class="pi pi-search"></i>
-                                <input type="text" class="w-full" pInputText placeholder="Pesquise o item desejado" />
-                            </span>
-                        </div>
-                        <div class="col-4">
-                            <span class=" mt-1 d-none d-md-flex p-input-icon-left d-flex justify-content-initial">
-                                <div class="circle">
-                                    <i class="{{viewListOrNot ? 'pi pi-list icon' : 'pi pi-th-large'}}" pTooltip="{{viewListOrNot ? 'Exbir lista' : 'Exibir ícones Grandes '}}" tooltipPosition="top" (click)="getList($event)"></i>
-                                </div>
-                            </span>
-                        </div>
+            <form novalidate [formGroup]="form">
+
+                <div class="row">
+                    <div class="col-12 col-md-12">
+                        <label class="mch-fs-30">Skills</label>
                     </div>
-                    <div *ngIf="viewListOrNot" class="row mt-0 mt-md-2 justify-content-center">
-                        <!-- Adicione a classe "justify-content-center" para centralizar -->
-                        <div *ngFor="let s of skills"
-                        (click)="viewSkill(s)" class=" fade-in mt-5 col-6 col-md-3 d-flex align-items-center justify-content-center">
-                            <div class="text-center panelStack">
-                                <img class="imgStack img-fluid" [src]="s.src" alt="Imagem">
-                                <div>
-                                    <p>{{ s.nome }}</p>
-                                </div>
-                                <div class="titleStack">
-                                    <label class="mt-2 labelStackTitle">{{ s.tipo }}</label>
+                    <div class="mt-4 mt-md-0 col-12 col-md-12 mch-color-white">
+                        <p>
+                            Aqui, listo alguns dos serviços e softwares que integram o meu dia a dia:
+                        </p>
+                    </div>
+                    <div class="mt-4 mt-md-0 col-12 col-md-12 mch-color-white">
+                        <div class="row">
+                            <div class="col-12 col-md-8 d-md-block">
+                                <span class="p-input-icon-right w-full">
+                                    <i class="pi pi-search"></i>
+                                    <input type="text" class="w-full" formControlName="skill" (keyup)="filterSkills()" pInputText placeholder="Pesquise o item desejado" />
+                                </span>
+                            </div>
+                            <div class="col-4">
+                                <span class=" mt-1 d-none d-md-flex p-input-icon-left d-flex justify-content-initial">
+                                    <div class="circle">
+                                        <i class="{{viewListOrNot ? 'pi pi-list icon' : 'pi pi-th-large'}}" pTooltip="{{viewListOrNot ? 'Exbir lista' : 'Exibir ícones Grandes '}}" tooltipPosition="top" (click)="getList($event)"></i>
+                                    </div>
+                                </span>
+                            </div>
+                        </div>
+                        <div *ngIf="viewListOrNot" class="row mt-0 mt-md-2 justify-content-center">
+                            <!-- Adicione a classe "justify-content-center" para centralizar -->
+                            <div *ngFor="let s of logsSkill"
+                            (click)="viewSkill(s)" class=" fade-in mt-5 col-6 col-md-3 d-flex align-items-center justify-content-center">
+                                <div class="text-center panelStack">
+                                    <img class="imgStack img-fluid" [src]="s.src" alt="Imagem">
+                                    <div>
+                                        <p>{{ s.nome }}</p>
+                                    </div>
+                                    <div class="titleStack">
+                                        <label class="mt-2 labelStackTitle">{{ s.tipo }}</label>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-
-                    <div *ngIf="!viewListOrNot" class="row mt-0 mt-md-4 justify-content-center">
-                        <!-- Adicione a classe "justify-content-center" para centralizar -->
-                        <p-table #table [value]="skills" styleClass="p-datatable-striped" responsiveLayout="scroll"
-                            [rowHover]="true">
-                            <ng-template pTemplate="header">
-                                <tr>
-
-                                    <th>
-                                        <p>Skill</p>
-                                    </th>
-                                    <th>
-                                        <p>Tipo </p>
-                                    </th>
-                                    <th >
-                                        <p>Visualizar</p>
-                                    </th>
-                                </tr>
-                            </ng-template>
-
-                            <ng-template pTemplate="body" let-skill>
-                                <tr>
-
-                                    <td>{{ skill.nome }}</td>
-                                    <td>{{ skill.tipo }}</td>
-                                    <td>
-                                        <div class="col-12 d-flex flex-row align-items-center">
-                                            <i pTooltip="Visualizar"
-                                            tooltipPosition="right"   class="iconView pi pi-eye rth-color-secundary" (click)="viewSkill(skill)"></i>
-                                        </div>
-                                    </td>
-                                </tr>
-                            </ng-template>
-                        </p-table>
+    
+                        <div *ngIf="!viewListOrNot" class="row mt-0 mt-md-4 justify-content-center">
+                            <!-- Adicione a classe "justify-content-center" para centralizar -->
+                            <p-table #table [value]="logsSkill" styleClass="p-datatable-striped" responsiveLayout="scroll"
+                                [rowHover]="true">
+                                <ng-template pTemplate="header">
+                                    <tr>
+    
+                                        <th>
+                                            <p>Skill</p>
+                                        </th>
+                                        <th>
+                                            <p>Tipo </p>
+                                        </th>
+                                        <th >
+                                            <p>Visualizar</p>
+                                        </th>
+                                    </tr>
+                                </ng-template>
+    
+                                <ng-template pTemplate="body" let-skill>
+                                    <tr>
+    
+                                        <td>{{ skill.nome }}</td>
+                                        <td>{{ skill.tipo }}</td>
+                                        <td>
+                                            <div class="col-12 d-flex flex-row align-items-center">
+                                                <i pTooltip="Visualizar"
+                                                tooltipPosition="right"   class="iconView pi pi-eye rth-color-secundary" (click)="viewSkill(skill)"></i>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                </ng-template>
+                            </p-table>
+                        </div>
                     </div>
                 </div>
-            </div>
+            </form>
         </div>
         <div class="mt-4">
             <app-footer></app-footer>
@@ -105,4 +89,4 @@
     </div>
 </div>
 
-<app-modal-viewer #mViewer [selectItem]="selectSkill"></app-modal-viewer>
+<!-- <app-modal-viewer #mViewer [selectItem]="selectSkill"></app-modal-viewer> -->
