deploy filter skills e stacks criados

--- a/src/app/pages/modulos/home/home.component.html
+++ b/src/app/pages/modulos/home/home.component.html
@@ -18,7 +18,7 @@
             <div class="row">
 
                 <div class="col-md-4 col-12 ">
-                    <p-button icon="pi pi-send" label="Me Acompanhe nas Redes" iconPos="right"></p-button>
+                    <p-button [routerLink]="['/contact']" icon="pi pi-send" label="Me Acompanhe nas Redes" iconPos="right"></p-button>
                 </div>
                 <!-- <div class="mt-4 mt-md-0 col-md-0 col-md-2 col-12">
                     <p-button label="Fotografia" styleClass="p-button-outlined"></p-button>
