--- a/src/app/pages/modulos/technologies/technologies.component.html
+++ b/src/app/pages/modulos/technologies/technologies.component.html
@@ -89,4 +89,4 @@
     </div>
 </div>
 
-<!-- <app-modal-viewer #mViewer [selectItem]="selectSkill"></app-modal-viewer> -->
+<app-modal-viewer #mViewer [selectItem]="selectSkill"></app-modal-viewer>
